Sugati/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_queuing__c</fullName>
        <inlineHelpText>Payment queuing to the financial team.</inlineHelpText>
        <label>Payment queuing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_holiday_phone_call_to_clients__c</fullName>
        <label>Pre-holiday phone call to clients</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prepare_and_send_Sharky_and_George_packs__c</fullName>
        <label>Prepare and send Sharky and George packs</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prepare_and_send_final_documents__c</fullName>
        <label>Prepare and send final documents</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Print_flight_documents__c</fullName>
        <inlineHelpText>Print flight document separate to final docs (including seats and any changes)</inlineHelpText>
        <label>Print flight documents</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reconfirm_hotel_transfer_booking__c</fullName>
        <inlineHelpText>Reconfirm hotel transfer bookings 2 weeks before departure</inlineHelpText>
        <label>Reconfirm hotel/transfer booking</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Referral_hamper__c</fullName>
        <label>Referral hamper</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remind_consultants_of_pre_holiday_call__c</fullName>
        <inlineHelpText>Remind consultants of upcoming pre-holiday phone call</inlineHelpText>
        <label>Remind consultants of pre-holiday call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_invoice__c</fullName>
        <inlineHelpText>Request invoice from suppliers.</inlineHelpText>
        <label>Request invoice</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Responsible_for_supplier_payments__c</fullName>
        <inlineHelpText>Responsible for supplier payments being requested on time.</inlineHelpText>
        <label>Responsible for supplier payments</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Return_questionnaire__c</fullName>
        <label>Return questionnaire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Seat_check_and_online_check_in__c</fullName>
        <label>Seat check and online check in</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_confirmation_documents__c</fullName>
        <label>Send confirmation documents</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_goodbye_email__c</fullName>
        <inlineHelpText>Send goodbye email 24 hours before departure.</inlineHelpText>
        <label>Send goodbye email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_recommendations__c</fullName>
        <inlineHelpText>White space - send email with recommendations, books, events, talks, clothes.</inlineHelpText>
        <label>Send recommendations</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Something_not_available__c</fullName>
        <inlineHelpText>Tell client immediately if something is not available.</inlineHelpText>
        <label>Something not available</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Take_balance_payment_and_issue_receipt__c</fullName>
        <label>Take balance payment and issue receipt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Taking_deposit__c</fullName>
        <inlineHelpText>Taking deposit payment, issues receipt/ATOL receipt.</inlineHelpText>
        <label>Taking deposit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Thank_you_note__c</fullName>
        <inlineHelpText>Thank you for booking note and deposit paid.</inlineHelpText>
        <label>Thank you note</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Price__c</fullName>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_departure_board__c</fullName>
        <label>Update departure board</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Update_in_house_records__c</fullName>
        <inlineHelpText>Keep all in-house records up to date with all information - passports, FFNs, dietary requirements, etc.</inlineHelpText>
        <label>Update in-house records</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Welcome_back_phonecall__c</fullName>
        <label>Welcome back phone call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Welcome_home_packs__c</fullName>
        <label>Welcome home packs</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CURRENCY_ISO_CODE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>O_RecordType__c</field>
            <operation>equals</operation>
            <value>GBP</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Opportunity_Selling_Price_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(PRIORVALUE(Amount) != Amount,PRIORVALUE(O_Margin__c) != O_Margin__c), O_Lock__c)</errorConditionFormula>
        <errorMessage>Selling price has been locked please contact to system admin</errorMessage>
    </validationRules>
</CustomObject>